<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_3">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/neo_sans_arabic"
                android:text="@string/profile_personly"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_account"
                android:scaleType="centerCrop"
                app:strokeColor="@color/purble"
                app:strokeWidth="0.5dp"
                android:adjustViewBounds="true"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_02" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_uploadImage"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/iv_camera_container"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile_image"
                app:layout_constraintEnd_toEndOf="@+id/iv_profile_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/neo_sans_arabic_bold"
                tools:text="Hamza Muhawesh"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neo_sans_arabic"
                android:text="0795986039"
                android:textColor="@color/light_gray_4"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_account_settings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="27dp"
                android:background="@drawable/outline_light_purple"
                android:drawableStart="@drawable/ic_arrow_circle_right"
                android:drawableEnd="@drawable/ic_profile_purple"
                android:drawablePadding="12dp"
                android:fontFamily="@font/neo_sans_arabic_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/account_settings"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_my_real_estate_ads"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/outline_light_purple"
                android:drawableStart="@drawable/ic_arrow_circle_right"
                android:drawableEnd="@drawable/ic_profile_purple"
                android:drawablePadding="12dp"
                android:fontFamily="@font/neo_sans_arabic_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/my_real_estate_ads"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_account_settings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_my_commercials"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/outline_light_purple"
                android:drawableStart="@drawable/ic_arrow_circle_right"
                android:drawableEnd="@drawable/ic_profile_purple"
                android:drawablePadding="12dp"
                android:fontFamily="@font/neo_sans_arabic_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/my_commercials"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_my_real_estate_ads" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_advertisement_package"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/outline_light_purple"
                android:drawableStart="@drawable/ic_arrow_circle_right"
                android:drawableEnd="@drawable/ic_profile_purple"
                android:drawablePadding="12dp"
                android:fontFamily="@font/neo_sans_arabic_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/advertisement_package"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_my_commercials" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_about_caravan_company"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/outline_light_purple"
                android:drawableStart="@drawable/ic_arrow_circle_right"
                android:drawableEnd="@drawable/ic_profile_purple"
                android:drawablePadding="12dp"
                android:fontFamily="@font/neo_sans_arabic_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/about_caravan_company"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_advertisement_package" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_bg_green"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_about_caravan_company">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/ic_whatsapp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neo_sans_arabic_bold"
                    android:text="@string/are_you_having_problem_connect_with_us"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView_04"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neo_sans_arabic"
                    android:text="@string/our_team_ready_answer_your_inquiries"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_03"
                    app:layout_constraintVertical_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_bg_gray"
                android:paddingBottom="25dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_01">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/photo6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/neo_sans_arabic"
                    android:text="@string/increase_the_chances"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_03" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/neo_sans_arabic_bold"
                    android:text="@string/add_your_ad_now"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textView_05" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_07"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="18dp"
                    android:drawableEnd="@drawable/ic_check"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/neo_sans_arabic"
                    android:text="@string/adv_1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textView_06" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_08"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="15dp"
                    android:drawableEnd="@drawable/ic_check"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/neo_sans_arabic"
                    android:text="@string/adv_2"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textView_07" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_09"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="18dp"
                    android:drawableEnd="@drawable/ic_check"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/neo_sans_arabic"
                    android:text="@string/adv_3"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textView_08" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_Post_ad_now"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginVertical="16dp"
                    android:backgroundTint="@color/purble"
                    android:fontFamily="@font/neo_sans_arabic"
                    android:text="@string/Post_ad_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_09" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>