<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:paddingHorizontal="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@drawable/outline_purple"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dialog" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/neo_sans_arabic_bold"
                android:text="@string/logout_question"
                android:textColor="@color/purble"
                android:textSize="14sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.30"
                    android:background="@drawable/outline_light_purple"
                    android:fontFamily="@font/neo_sans_arabic"
                    android:gravity="center"
                    android:onClick="@{onClickListener}"
                    android:paddingVertical="10dp"
                    android:text="@string/back"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnLogout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:background="@drawable/custom_bg_purple"
                    android:fontFamily="@font/neo_sans_arabic"
                    android:gravity="center"
                    android:onClick="@{onClickListener}"
                    android:padding="10dp"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>